Compiler_B34054082_HW3/y.output
Terminals unused in grammar

   ','


State 34 conflicts: 7 shift/reduce
State 35 conflicts: 7 shift/reduce
State 36 conflicts: 7 shift/reduce
State 41 conflicts: 2 shift/reduce
State 43 conflicts: 2 shift/reduce
State 47 conflicts: 23 shift/reduce
State 48 conflicts: 22 shift/reduce
State 78 conflicts: 1 shift/reduce
State 80 conflicts: 1 shift/reduce
State 84 conflicts: 7 shift/reduce
State 85 conflicts: 7 shift/reduce
State 86 conflicts: 7 shift/reduce
State 87 conflicts: 7 shift/reduce
State 88 conflicts: 7 shift/reduce
State 89 conflicts: 7 shift/reduce
State 90 conflicts: 7 shift/reduce
State 91 conflicts: 7 shift/reduce
State 92 conflicts: 7 shift/reduce
State 93 conflicts: 7 shift/reduce
State 94 conflicts: 7 shift/reduce
State 95 conflicts: 7 shift/reduce
State 96 conflicts: 22 shift/reduce
State 97 conflicts: 22 shift/reduce
State 98 conflicts: 22 shift/reduce
State 99 conflicts: 22 shift/reduce
State 100 conflicts: 22 shift/reduce
State 101 conflicts: 7 shift/reduce
State 102 conflicts: 7 shift/reduce
State 113 conflicts: 22 shift/reduce
State 122 conflicts: 2 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: StatementList

    2 StatementList: StatementList Statement
    3              | Statement

    4 Statement: DeclarationStmt NEWLINE
    5          | Expression NEWLINE
    6          | '{'
    7          | '}'
    8          | IfStmt StatementList
    9          | IfStmt StatementList ELSE StatementList
   10          | ForStmt StatementList
   11          | PrintStmt NEWLINE
   12          | NEWLINE

   13 DeclarationStmt: VAR IDENT Type
   14                | VAR IDENT Type '=' Expression
   15                | VAR IDENT '[' Expression ']' Type

   16 IfStmt: IF Expression

   17 ForStmt: FOR Expression
   18        | FOR ForClause

   19 ForClause: Expression ';' Expression ';' Expression

   20 PrintStmt: PRINT '(' Expression ')'
   21          | PRINT '(' IDENT ')'
   22          | PRINTLN '(' IDENT ')'
   23          | PRINTLN '(' Expression '[' Expression ']' ')'
   24          | PRINTLN '(' Expression ')'

   25 Expression: '(' Expression ')'
   26           | Type '(' Expression ')'
   27           | Expression '[' Expression ']'
   28           | Expression '=' Expression
   29           | Expression ADD_ASSIGN Expression
   30           | Expression SUB_ASSIGN Expression
   31           | Expression MUL_ASSIGN Expression
   32           | Expression QUO_ASSIGN Expression
   33           | Expression REM_ASSIGN Expression
   34           | Expression '+' Expression
   35           | Expression '-' Expression
   36           | Expression '*' Expression
   37           | Expression '/' Expression
   38           | Expression '%' Expression
   39           | Expression '>' Expression
   40           | Expression '<' Expression
   41           | Expression EQL Expression
   42           | Expression NEQ Expression
   43           | Expression LEQ Expression
   44           | Expression GEQ Expression
   45           | Expression LOR Expression
   46           | Expression LAND Expression
   47           | '-' Expression
   48           | '+' Expression
   49           | '!' Expression
   50           | Expression INC
   51           | Expression DEC
   52           | Literal

   53 Literal: INT_LIT
   54        | FLOAT_LIT
   55        | '"' STRING_LIT '"'
   56        | TRUE
   57        | FALSE
   58        | IDENT

   59 Type: INT
   60     | FLOAT
   61     | STRING
   62     | BOOL


Terminals, with rules where they appear

$end (0) 0
'!' (33) 49
'"' (34) 55
'%' (37) 38
'(' (40) 20 21 22 23 24 25 26
')' (41) 20 21 22 23 24 25 26
'*' (42) 36
'+' (43) 34 48
',' (44)
'-' (45) 35 47
'/' (47) 37
';' (59) 19
'<' (60) 40
'=' (61) 14 28
'>' (62) 39
'[' (91) 15 23 27
']' (93) 15 23 27
'{' (123) 6
'}' (125) 7
error (256)
INT (258) 59
FLOAT (259) 60
STRING (260) 61
BOOL (261) 62
TRUE (262) 56
FALSE (263) 57
VAR (264) 13 14 15
GEQ (265) 44
LEQ (266) 43
EQL (267) 41
NEQ (268) 42
INC (269) 50
DEC (270) 51
ADD_ASSIGN (271) 29
SUB_ASSIGN (272) 30
MUL_ASSIGN (273) 31
QUO_ASSIGN (274) 32
REM_ASSIGN (275) 33
LAND (276) 46
LOR (277) 45
NEWLINE (278) 4 5 11 12
PRINT (279) 20 21
PRINTLN (280) 22 23 24
IF (281) 16
ELSE (282) 9
FOR (283) 17 18
UMINUS (284)
INT_LIT (285) 53
FLOAT_LIT (286) 54
STRING_LIT (287) 55
IDENT (288) 13 14 15 21 22 58


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
Program (53)
    on left: 1, on right: 0
StatementList (54)
    on left: 2 3, on right: 1 2 8 9 10
Statement (55)
    on left: 4 5 6 7 8 9 10 11 12, on right: 2 3
DeclarationStmt (56)
    on left: 13 14 15, on right: 4
IfStmt (57)
    on left: 16, on right: 8 9
ForStmt (58)
    on left: 17 18, on right: 10
ForClause (59)
    on left: 19, on right: 18
PrintStmt (60)
    on left: 20 21 22 23 24, on right: 11
Expression (61)
    on left: 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42
    43 44 45 46 47 48 49 50 51 52, on right: 5 14 15 16 17 19 20 23
    24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44
    45 46 47 48 49 50 51
Literal (62)
    on left: 53 54 55 56 57 58, on right: 52
Type (63)
    on left: 59 60 61 62, on right: 13 14 15 26


State 0

    0 $accept: . Program $end

    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    STRING     shift, and go to state 3
    BOOL       shift, and go to state 4
    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    VAR        shift, and go to state 7
    '+'        shift, and go to state 8
    '-'        shift, and go to state 9
    '!'        shift, and go to state 10
    '('        shift, and go to state 11
    '{'        shift, and go to state 12
    '}'        shift, and go to state 13
    '"'        shift, and go to state 14
    NEWLINE    shift, and go to state 15
    PRINT      shift, and go to state 16
    PRINTLN    shift, and go to state 17
    IF         shift, and go to state 18
    FOR        shift, and go to state 19
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 22

    Program          go to state 23
    StatementList    go to state 24
    Statement        go to state 25
    DeclarationStmt  go to state 26
    IfStmt           go to state 27
    ForStmt          go to state 28
    PrintStmt        go to state 29
    Expression       go to state 30
    Literal          go to state 31
    Type             go to state 32


State 1

   59 Type: INT .

    $default  reduce using rule 59 (Type)


State 2

   60 Type: FLOAT .

    $default  reduce using rule 60 (Type)


State 3

   61 Type: STRING .

    $default  reduce using rule 61 (Type)


State 4

   62 Type: BOOL .

    $default  reduce using rule 62 (Type)


State 5

   56 Literal: TRUE .

    $default  reduce using rule 56 (Literal)


State 6

   57 Literal: FALSE .

    $default  reduce using rule 57 (Literal)


State 7

   13 DeclarationStmt: VAR . IDENT Type
   14                | VAR . IDENT Type '=' Expression
   15                | VAR . IDENT '[' Expression ']' Type

    IDENT  shift, and go to state 33


State 8

   48 Expression: '+' . Expression

    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    STRING     shift, and go to state 3
    BOOL       shift, and go to state 4
    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    '+'        shift, and go to state 8
    '-'        shift, and go to state 9
    '!'        shift, and go to state 10
    '('        shift, and go to state 11
    '"'        shift, and go to state 14
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 22

    Expression  go to state 34
    Literal     go to state 31
    Type        go to state 32


State 9

   47 Expression: '-' . Expression

    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    STRING     shift, and go to state 3
    BOOL       shift, and go to state 4
    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    '+'        shift, and go to state 8
    '-'        shift, and go to state 9
    '!'        shift, and go to state 10
    '('        shift, and go to state 11
    '"'        shift, and go to state 14
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 22

    Expression  go to state 35
    Literal     go to state 31
    Type        go to state 32


State 10

   49 Expression: '!' . Expression

    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    STRING     shift, and go to state 3
    BOOL       shift, and go to state 4
    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    '+'        shift, and go to state 8
    '-'        shift, and go to state 9
    '!'        shift, and go to state 10
    '('        shift, and go to state 11
    '"'        shift, and go to state 14
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 22

    Expression  go to state 36
    Literal     go to state 31
    Type        go to state 32


State 11

   25 Expression: '(' . Expression ')'

    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    STRING     shift, and go to state 3
    BOOL       shift, and go to state 4
    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    '+'        shift, and go to state 8
    '-'        shift, and go to state 9
    '!'        shift, and go to state 10
    '('        shift, and go to state 11
    '"'        shift, and go to state 14
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 22

    Expression  go to state 37
    Literal     go to state 31
    Type        go to state 32


State 12

    6 Statement: '{' .

    $default  reduce using rule 6 (Statement)


State 13

    7 Statement: '}' .

    $default  reduce using rule 7 (Statement)


State 14

   55 Literal: '"' . STRING_LIT '"'

    STRING_LIT  shift, and go to state 38


State 15

   12 Statement: NEWLINE .

    $default  reduce using rule 12 (Statement)


State 16

   20 PrintStmt: PRINT . '(' Expression ')'
   21          | PRINT . '(' IDENT ')'

    '('  shift, and go to state 39


State 17

   22 PrintStmt: PRINTLN . '(' IDENT ')'
   23          | PRINTLN . '(' Expression '[' Expression ']' ')'
   24          | PRINTLN . '(' Expression ')'

    '('  shift, and go to state 40


State 18

   16 IfStmt: IF . Expression

    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    STRING     shift, and go to state 3
    BOOL       shift, and go to state 4
    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    '+'        shift, and go to state 8
    '-'        shift, and go to state 9
    '!'        shift, and go to state 10
    '('        shift, and go to state 11
    '"'        shift, and go to state 14
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 22

    Expression  go to state 41
    Literal     go to state 31
    Type        go to state 32


State 19

   17 ForStmt: FOR . Expression
   18        | FOR . ForClause

    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    STRING     shift, and go to state 3
    BOOL       shift, and go to state 4
    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    '+'        shift, and go to state 8
    '-'        shift, and go to state 9
    '!'        shift, and go to state 10
    '('        shift, and go to state 11
    '"'        shift, and go to state 14
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 22

    ForClause   go to state 42
    Expression  go to state 43
    Literal     go to state 31
    Type        go to state 32


State 20

   53 Literal: INT_LIT .

    $default  reduce using rule 53 (Literal)


State 21

   54 Literal: FLOAT_LIT .

    $default  reduce using rule 54 (Literal)


State 22

   58 Literal: IDENT .

    $default  reduce using rule 58 (Literal)


State 23

    0 $accept: Program . $end

    $end  shift, and go to state 44


State 24

    1 Program: StatementList .
    2 StatementList: StatementList . Statement

    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    STRING     shift, and go to state 3
    BOOL       shift, and go to state 4
    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    VAR        shift, and go to state 7
    '+'        shift, and go to state 8
    '-'        shift, and go to state 9
    '!'        shift, and go to state 10
    '('        shift, and go to state 11
    '{'        shift, and go to state 12
    '}'        shift, and go to state 13
    '"'        shift, and go to state 14
    NEWLINE    shift, and go to state 15
    PRINT      shift, and go to state 16
    PRINTLN    shift, and go to state 17
    IF         shift, and go to state 18
    FOR        shift, and go to state 19
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 22

    $default  reduce using rule 1 (Program)

    Statement        go to state 45
    DeclarationStmt  go to state 26
    IfStmt           go to state 27
    ForStmt          go to state 28
    PrintStmt        go to state 29
    Expression       go to state 30
    Literal          go to state 31
    Type             go to state 32


State 25

    3 StatementList: Statement .

    $default  reduce using rule 3 (StatementList)


State 26

    4 Statement: DeclarationStmt . NEWLINE

    NEWLINE  shift, and go to state 46


State 27

    8 Statement: IfStmt . StatementList
    9          | IfStmt . StatementList ELSE StatementList

    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    STRING     shift, and go to state 3
    BOOL       shift, and go to state 4
    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    VAR        shift, and go to state 7
    '+'        shift, and go to state 8
    '-'        shift, and go to state 9
    '!'        shift, and go to state 10
    '('        shift, and go to state 11
    '{'        shift, and go to state 12
    '}'        shift, and go to state 13
    '"'        shift, and go to state 14
    NEWLINE    shift, and go to state 15
    PRINT      shift, and go to state 16
    PRINTLN    shift, and go to state 17
    IF         shift, and go to state 18
    FOR        shift, and go to state 19
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 22

    StatementList    go to state 47
    Statement        go to state 25
    DeclarationStmt  go to state 26
    IfStmt           go to state 27
    ForStmt          go to state 28
    PrintStmt        go to state 29
    Expression       go to state 30
    Literal          go to state 31
    Type             go to state 32


State 28

   10 Statement: ForStmt . StatementList

    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    STRING     shift, and go to state 3
    BOOL       shift, and go to state 4
    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    VAR        shift, and go to state 7
    '+'        shift, and go to state 8
    '-'        shift, and go to state 9
    '!'        shift, and go to state 10
    '('        shift, and go to state 11
    '{'        shift, and go to state 12
    '}'        shift, and go to state 13
    '"'        shift, and go to state 14
    NEWLINE    shift, and go to state 15
    PRINT      shift, and go to state 16
    PRINTLN    shift, and go to state 17
    IF         shift, and go to state 18
    FOR        shift, and go to state 19
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 22

    StatementList    go to state 48
    Statement        go to state 25
    DeclarationStmt  go to state 26
    IfStmt           go to state 27
    ForStmt          go to state 28
    PrintStmt        go to state 29
    Expression       go to state 30
    Literal          go to state 31
    Type             go to state 32


State 29

   11 Statement: PrintStmt . NEWLINE

    NEWLINE  shift, and go to state 49


State 30

    5 Statement: Expression . NEWLINE
   27 Expression: Expression . '[' Expression ']'
   28           | Expression . '=' Expression
   29           | Expression . ADD_ASSIGN Expression
   30           | Expression . SUB_ASSIGN Expression
   31           | Expression . MUL_ASSIGN Expression
   32           | Expression . QUO_ASSIGN Expression
   33           | Expression . REM_ASSIGN Expression
   34           | Expression . '+' Expression
   35           | Expression . '-' Expression
   36           | Expression . '*' Expression
   37           | Expression . '/' Expression
   38           | Expression . '%' Expression
   39           | Expression . '>' Expression
   40           | Expression . '<' Expression
   41           | Expression . EQL Expression
   42           | Expression . NEQ Expression
   43           | Expression . LEQ Expression
   44           | Expression . GEQ Expression
   45           | Expression . LOR Expression
   46           | Expression . LAND Expression
   50           | Expression . INC
   51           | Expression . DEC

    '>'         shift, and go to state 50
    '<'         shift, and go to state 51
    GEQ         shift, and go to state 52
    LEQ         shift, and go to state 53
    EQL         shift, and go to state 54
    NEQ         shift, and go to state 55
    '+'         shift, and go to state 56
    '-'         shift, and go to state 57
    '*'         shift, and go to state 58
    '/'         shift, and go to state 59
    '%'         shift, and go to state 60
    INC         shift, and go to state 61
    DEC         shift, and go to state 62
    '='         shift, and go to state 63
    ADD_ASSIGN  shift, and go to state 64
    SUB_ASSIGN  shift, and go to state 65
    MUL_ASSIGN  shift, and go to state 66
    QUO_ASSIGN  shift, and go to state 67
    REM_ASSIGN  shift, and go to state 68
    LAND        shift, and go to state 69
    LOR         shift, and go to state 70
    '['         shift, and go to state 71
    NEWLINE     shift, and go to state 72


State 31

   52 Expression: Literal .

    $default  reduce using rule 52 (Expression)


State 32

   26 Expression: Type . '(' Expression ')'

    '('  shift, and go to state 73


State 33

   13 DeclarationStmt: VAR IDENT . Type
   14                | VAR IDENT . Type '=' Expression
   15                | VAR IDENT . '[' Expression ']' Type

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    STRING  shift, and go to state 3
    BOOL    shift, and go to state 4
    '['     shift, and go to state 74

    Type  go to state 75


State 34

   27 Expression: Expression . '[' Expression ']'
   28           | Expression . '=' Expression
   29           | Expression . ADD_ASSIGN Expression
   30           | Expression . SUB_ASSIGN Expression
   31           | Expression . MUL_ASSIGN Expression
   32           | Expression . QUO_ASSIGN Expression
   33           | Expression . REM_ASSIGN Expression
   34           | Expression . '+' Expression
   35           | Expression . '-' Expression
   36           | Expression . '*' Expression
   37           | Expression . '/' Expression
   38           | Expression . '%' Expression
   39           | Expression . '>' Expression
   40           | Expression . '<' Expression
   41           | Expression . EQL Expression
   42           | Expression . NEQ Expression
   43           | Expression . LEQ Expression
   44           | Expression . GEQ Expression
   45           | Expression . LOR Expression
   46           | Expression . LAND Expression
   48           | '+' Expression .
   50           | Expression . INC
   51           | Expression . DEC

    INC         shift, and go to state 61
    DEC         shift, and go to state 62
    ADD_ASSIGN  shift, and go to state 64
    SUB_ASSIGN  shift, and go to state 65
    MUL_ASSIGN  shift, and go to state 66
    QUO_ASSIGN  shift, and go to state 67
    REM_ASSIGN  shift, and go to state 68
    '['         shift, and go to state 71

    INC         [reduce using rule 48 (Expression)]
    DEC         [reduce using rule 48 (Expression)]
    ADD_ASSIGN  [reduce using rule 48 (Expression)]
    SUB_ASSIGN  [reduce using rule 48 (Expression)]
    MUL_ASSIGN  [reduce using rule 48 (Expression)]
    QUO_ASSIGN  [reduce using rule 48 (Expression)]
    REM_ASSIGN  [reduce using rule 48 (Expression)]
    $default    reduce using rule 48 (Expression)


State 35

   27 Expression: Expression . '[' Expression ']'
   28           | Expression . '=' Expression
   29           | Expression . ADD_ASSIGN Expression
   30           | Expression . SUB_ASSIGN Expression
   31           | Expression . MUL_ASSIGN Expression
   32           | Expression . QUO_ASSIGN Expression
   33           | Expression . REM_ASSIGN Expression
   34           | Expression . '+' Expression
   35           | Expression . '-' Expression
   36           | Expression . '*' Expression
   37           | Expression . '/' Expression
   38           | Expression . '%' Expression
   39           | Expression . '>' Expression
   40           | Expression . '<' Expression
   41           | Expression . EQL Expression
   42           | Expression . NEQ Expression
   43           | Expression . LEQ Expression
   44           | Expression . GEQ Expression
   45           | Expression . LOR Expression
   46           | Expression . LAND Expression
   47           | '-' Expression .
   50           | Expression . INC
   51           | Expression . DEC

    INC         shift, and go to state 61
    DEC         shift, and go to state 62
    ADD_ASSIGN  shift, and go to state 64
    SUB_ASSIGN  shift, and go to state 65
    MUL_ASSIGN  shift, and go to state 66
    QUO_ASSIGN  shift, and go to state 67
    REM_ASSIGN  shift, and go to state 68
    '['         shift, and go to state 71

    INC         [reduce using rule 47 (Expression)]
    DEC         [reduce using rule 47 (Expression)]
    ADD_ASSIGN  [reduce using rule 47 (Expression)]
    SUB_ASSIGN  [reduce using rule 47 (Expression)]
    MUL_ASSIGN  [reduce using rule 47 (Expression)]
    QUO_ASSIGN  [reduce using rule 47 (Expression)]
    REM_ASSIGN  [reduce using rule 47 (Expression)]
    $default    reduce using rule 47 (Expression)


State 36

   27 Expression: Expression . '[' Expression ']'
   28           | Expression . '=' Expression
   29           | Expression . ADD_ASSIGN Expression
   30           | Expression . SUB_ASSIGN Expression
   31           | Expression . MUL_ASSIGN Expression
   32           | Expression . QUO_ASSIGN Expression
   33           | Expression . REM_ASSIGN Expression
   34           | Expression . '+' Expression
   35           | Expression . '-' Expression
   36           | Expression . '*' Expression
   37           | Expression . '/' Expression
   38           | Expression . '%' Expression
   39           | Expression . '>' Expression
   40           | Expression . '<' Expression
   41           | Expression . EQL Expression
   42           | Expression . NEQ Expression
   43           | Expression . LEQ Expression
   44           | Expression . GEQ Expression
   45           | Expression . LOR Expression
   46           | Expression . LAND Expression
   49           | '!' Expression .
   50           | Expression . INC
   51           | Expression . DEC

    INC         shift, and go to state 61
    DEC         shift, and go to state 62
    ADD_ASSIGN  shift, and go to state 64
    SUB_ASSIGN  shift, and go to state 65
    MUL_ASSIGN  shift, and go to state 66
    QUO_ASSIGN  shift, and go to state 67
    REM_ASSIGN  shift, and go to state 68
    '['         shift, and go to state 71

    INC         [reduce using rule 49 (Expression)]
    DEC         [reduce using rule 49 (Expression)]
    ADD_ASSIGN  [reduce using rule 49 (Expression)]
    SUB_ASSIGN  [reduce using rule 49 (Expression)]
    MUL_ASSIGN  [reduce using rule 49 (Expression)]
    QUO_ASSIGN  [reduce using rule 49 (Expression)]
    REM_ASSIGN  [reduce using rule 49 (Expression)]
    $default    reduce using rule 49 (Expression)


State 37

   25 Expression: '(' Expression . ')'
   27           | Expression . '[' Expression ']'
   28           | Expression . '=' Expression
   29           | Expression . ADD_ASSIGN Expression
   30           | Expression . SUB_ASSIGN Expression
   31           | Expression . MUL_ASSIGN Expression
   32           | Expression . QUO_ASSIGN Expression
   33           | Expression . REM_ASSIGN Expression
   34           | Expression . '+' Expression
   35           | Expression . '-' Expression
   36           | Expression . '*' Expression
   37           | Expression . '/' Expression
   38           | Expression . '%' Expression
   39           | Expression . '>' Expression
   40           | Expression . '<' Expression
   41           | Expression . EQL Expression
   42           | Expression . NEQ Expression
   43           | Expression . LEQ Expression
   44           | Expression . GEQ Expression
   45           | Expression . LOR Expression
   46           | Expression . LAND Expression
   50           | Expression . INC
   51           | Expression . DEC

    '>'         shift, and go to state 50
    '<'         shift, and go to state 51
    GEQ         shift, and go to state 52
    LEQ         shift, and go to state 53
    EQL         shift, and go to state 54
    NEQ         shift, and go to state 55
    '+'         shift, and go to state 56
    '-'         shift, and go to state 57
    '*'         shift, and go to state 58
    '/'         shift, and go to state 59
    '%'         shift, and go to state 60
    INC         shift, and go to state 61
    DEC         shift, and go to state 62
    '='         shift, and go to state 63
    ADD_ASSIGN  shift, and go to state 64
    SUB_ASSIGN  shift, and go to state 65
    MUL_ASSIGN  shift, and go to state 66
    QUO_ASSIGN  shift, and go to state 67
    REM_ASSIGN  shift, and go to state 68
    LAND        shift, and go to state 69
    LOR         shift, and go to state 70
    ')'         shift, and go to state 76
    '['         shift, and go to state 71


State 38

   55 Literal: '"' STRING_LIT . '"'

    '"'  shift, and go to state 77


State 39

   20 PrintStmt: PRINT '(' . Expression ')'
   21          | PRINT '(' . IDENT ')'

    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    STRING     shift, and go to state 3
    BOOL       shift, and go to state 4
    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    '+'        shift, and go to state 8
    '-'        shift, and go to state 9
    '!'        shift, and go to state 10
    '('        shift, and go to state 11
    '"'        shift, and go to state 14
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 78

    Expression  go to state 79
    Literal     go to state 31
    Type        go to state 32


State 40

   22 PrintStmt: PRINTLN '(' . IDENT ')'
   23          | PRINTLN '(' . Expression '[' Expression ']' ')'
   24          | PRINTLN '(' . Expression ')'

    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    STRING     shift, and go to state 3
    BOOL       shift, and go to state 4
    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    '+'        shift, and go to state 8
    '-'        shift, and go to state 9
    '!'        shift, and go to state 10
    '('        shift, and go to state 11
    '"'        shift, and go to state 14
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 80

    Expression  go to state 81
    Literal     go to state 31
    Type        go to state 32


State 41

   16 IfStmt: IF Expression .
   27 Expression: Expression . '[' Expression ']'
   28           | Expression . '=' Expression
   29           | Expression . ADD_ASSIGN Expression
   30           | Expression . SUB_ASSIGN Expression
   31           | Expression . MUL_ASSIGN Expression
   32           | Expression . QUO_ASSIGN Expression
   33           | Expression . REM_ASSIGN Expression
   34           | Expression . '+' Expression
   35           | Expression . '-' Expression
   36           | Expression . '*' Expression
   37           | Expression . '/' Expression
   38           | Expression . '%' Expression
   39           | Expression . '>' Expression
   40           | Expression . '<' Expression
   41           | Expression . EQL Expression
   42           | Expression . NEQ Expression
   43           | Expression . LEQ Expression
   44           | Expression . GEQ Expression
   45           | Expression . LOR Expression
   46           | Expression . LAND Expression
   50           | Expression . INC
   51           | Expression . DEC

    '>'         shift, and go to state 50
    '<'         shift, and go to state 51
    GEQ         shift, and go to state 52
    LEQ         shift, and go to state 53
    EQL         shift, and go to state 54
    NEQ         shift, and go to state 55
    '+'         shift, and go to state 56
    '-'         shift, and go to state 57
    '*'         shift, and go to state 58
    '/'         shift, and go to state 59
    '%'         shift, and go to state 60
    INC         shift, and go to state 61
    DEC         shift, and go to state 62
    '='         shift, and go to state 63
    ADD_ASSIGN  shift, and go to state 64
    SUB_ASSIGN  shift, and go to state 65
    MUL_ASSIGN  shift, and go to state 66
    QUO_ASSIGN  shift, and go to state 67
    REM_ASSIGN  shift, and go to state 68
    LAND        shift, and go to state 69
    LOR         shift, and go to state 70
    '['         shift, and go to state 71

    '+'       [reduce using rule 16 (IfStmt)]
    '-'       [reduce using rule 16 (IfStmt)]
    $default  reduce using rule 16 (IfStmt)


State 42

   18 ForStmt: FOR ForClause .

    $default  reduce using rule 18 (ForStmt)


State 43

   17 ForStmt: FOR Expression .
   19 ForClause: Expression . ';' Expression ';' Expression
   27 Expression: Expression . '[' Expression ']'
   28           | Expression . '=' Expression
   29           | Expression . ADD_ASSIGN Expression
   30           | Expression . SUB_ASSIGN Expression
   31           | Expression . MUL_ASSIGN Expression
   32           | Expression . QUO_ASSIGN Expression
   33           | Expression . REM_ASSIGN Expression
   34           | Expression . '+' Expression
   35           | Expression . '-' Expression
   36           | Expression . '*' Expression
   37           | Expression . '/' Expression
   38           | Expression . '%' Expression
   39           | Expression . '>' Expression
   40           | Expression . '<' Expression
   41           | Expression . EQL Expression
   42           | Expression . NEQ Expression
   43           | Expression . LEQ Expression
   44           | Expression . GEQ Expression
   45           | Expression . LOR Expression
   46           | Expression . LAND Expression
   50           | Expression . INC
   51           | Expression . DEC

    '>'         shift, and go to state 50
    '<'         shift, and go to state 51
    GEQ         shift, and go to state 52
    LEQ         shift, and go to state 53
    EQL         shift, and go to state 54
    NEQ         shift, and go to state 55
    '+'         shift, and go to state 56
    '-'         shift, and go to state 57
    '*'         shift, and go to state 58
    '/'         shift, and go to state 59
    '%'         shift, and go to state 60
    INC         shift, and go to state 61
    DEC         shift, and go to state 62
    '='         shift, and go to state 63
    ADD_ASSIGN  shift, and go to state 64
    SUB_ASSIGN  shift, and go to state 65
    MUL_ASSIGN  shift, and go to state 66
    QUO_ASSIGN  shift, and go to state 67
    REM_ASSIGN  shift, and go to state 68
    LAND        shift, and go to state 69
    LOR         shift, and go to state 70
    '['         shift, and go to state 71
    ';'         shift, and go to state 82

    '+'       [reduce using rule 17 (ForStmt)]
    '-'       [reduce using rule 17 (ForStmt)]
    $default  reduce using rule 17 (ForStmt)


State 44

    0 $accept: Program $end .

    $default  accept


State 45

    2 StatementList: StatementList Statement .

    $default  reduce using rule 2 (StatementList)


State 46

    4 Statement: DeclarationStmt NEWLINE .

    $default  reduce using rule 4 (Statement)


State 47

    2 StatementList: StatementList . Statement
    8 Statement: IfStmt StatementList .
    9          | IfStmt StatementList . ELSE StatementList

    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    STRING     shift, and go to state 3
    BOOL       shift, and go to state 4
    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    VAR        shift, and go to state 7
    '+'        shift, and go to state 8
    '-'        shift, and go to state 9
    '!'        shift, and go to state 10
    '('        shift, and go to state 11
    '{'        shift, and go to state 12
    '}'        shift, and go to state 13
    '"'        shift, and go to state 14
    NEWLINE    shift, and go to state 15
    PRINT      shift, and go to state 16
    PRINTLN    shift, and go to state 17
    IF         shift, and go to state 18
    ELSE       shift, and go to state 83
    FOR        shift, and go to state 19
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 22

    INT        [reduce using rule 8 (Statement)]
    FLOAT      [reduce using rule 8 (Statement)]
    STRING     [reduce using rule 8 (Statement)]
    BOOL       [reduce using rule 8 (Statement)]
    TRUE       [reduce using rule 8 (Statement)]
    FALSE      [reduce using rule 8 (Statement)]
    VAR        [reduce using rule 8 (Statement)]
    '+'        [reduce using rule 8 (Statement)]
    '-'        [reduce using rule 8 (Statement)]
    '!'        [reduce using rule 8 (Statement)]
    '('        [reduce using rule 8 (Statement)]
    '{'        [reduce using rule 8 (Statement)]
    '}'        [reduce using rule 8 (Statement)]
    '"'        [reduce using rule 8 (Statement)]
    NEWLINE    [reduce using rule 8 (Statement)]
    PRINT      [reduce using rule 8 (Statement)]
    PRINTLN    [reduce using rule 8 (Statement)]
    IF         [reduce using rule 8 (Statement)]
    ELSE       [reduce using rule 8 (Statement)]
    FOR        [reduce using rule 8 (Statement)]
    INT_LIT    [reduce using rule 8 (Statement)]
    FLOAT_LIT  [reduce using rule 8 (Statement)]
    IDENT      [reduce using rule 8 (Statement)]
    $default   reduce using rule 8 (Statement)

    Statement        go to state 45
    DeclarationStmt  go to state 26
    IfStmt           go to state 27
    ForStmt          go to state 28
    PrintStmt        go to state 29
    Expression       go to state 30
    Literal          go to state 31
    Type             go to state 32


State 48

    2 StatementList: StatementList . Statement
   10 Statement: ForStmt StatementList .
